--- a/data_fed.qmd
+++ b/data_fed.qmd
@@ -250,7 +250,7 @@ run_ccf_test(data = overdue30to89.post.lcbank |> left_join (us_measures_qtr,by =
 
 #### Cross-Correlation between macro economic variables
 
-@fig-ccf-rrsfs assumes *Real Advance Retail and Food Services Sales per capita* (RRSFS.Pop) is our dependant variable (Y). we observe significant correlations at both positive and negative lags. This pattern indicates a bidirectional or feedback relationship between X and the dependent variable Y. For example, @fig-ccf-rrsfs-2 shows significant correlation at -1 lag suggesting that changes in unemployment have an impact on retail and food sales in the next quarter. But there's also a weaker but significant correlation at +1 which suggests a change in retail and food sales impacts unemployment in the following quarter. To remove the potential risk of multicollinearity we would only have one of these variables included in the same model.  
+@fig-ccf-rrsfs-1 and @fig-ccf-rrsfs-2 assumes *Real Advance Retail and Food Services Sales per capita* (RRSFS.Pop) is our dependant variable (Y). we observe significant correlations at both positive and negative lags. This pattern indicates a bidirectional or feedback relationship between X and the dependent variable Y. For example, @fig-ccf-rrsfs-2 shows significant correlation at -1 lag suggesting that changes in unemployment have an impact on retail and food sales in the next quarter. But there's also a weaker but significant correlation at +1 which suggests a change in retail and food sales impacts unemployment in the following quarter. To remove the potential risk of multicollinearity we would only have one of these variables included in the same model.  
 
 ```{r}
 #| warning: false
@@ -260,6 +260,7 @@ run_ccf_test(data = overdue30to89.post.lcbank |> left_join (us_measures_qtr,by =
 #| fig-subcap:
 #|   - "CCF for RRSFS.Pop (Y) and CDSP (X)"
 #|   - "CCF for RRSFS.Pop (Y) and UNRATE (X)"
+#|   - "CCF for CDSP (Y) and UNRATE (X)"
 #| layout-ncol: 2 
 run_ccf_test(data = us_measures_qtr,
              target_variable = "RRSFS.Pop",
@@ -270,6 +271,11 @@ run_ccf_test(data = us_measures_qtr,
              target_variable = "RRSFS.Pop",
              exog_variable = "UNRATE",
              do_difference = TRUE)                  
+
+run_ccf_test(data = us_measures_qtr,
+             target_variable = "CDSP",
+             exog_variable = "UNRATE",
+             do_difference = TRUE)    
 
 ```
 
